--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google-cloud/vision": "^3.1.2",
     "discord.js-selfbot-v13": "^2.12.1",
     "dotenv": "^16.0.3",
     "openai": "^3.2.1"
