--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "@google-cloud/speech": "^5.4.1",
+    "@google-cloud/storage": "^6.9.5",
     "@google-cloud/vision": "^3.1.2",
+    "axios": "^1.4.0",
     "discord.js-selfbot-v13": "^2.12.1",
     "dotenv": "^16.0.3",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "uuid": "^9.0.0"
   }
 }
